package com.yangsx95.product;

/**
 * @author yangsx
 * @version 1.0
 * @date 2019/9/13
 */
public class Plane implements Movable {
    @Override
    public void go() {
        System.out.println("飞机 咻~~~");
    }
}
